--- a/src/main/webapp/WEB-INF/views/index.html
+++ b/src/main/webapp/WEB-INF/views/index.html
@@ -21,9 +21,9 @@
  
   <div class="col-lg-4">
     <div class="input-group">
-      <input type="text" class="form-control" placeholder="Search for...">
+      <input type="text" class="form-control" placeholder="Search for..." id="search">
       <span class="input-group-btn">
-        <button class="btn btn-default" type="button">Go!</button>
+        <button class="btn btn-default" type="button" onclick=" search()">Go!</button>
       </span>
     </div><!-- /input-group -->
   </div><!-- /.col-lg-6 -->
@@ -36,30 +36,14 @@
       <thead>
         <tr>
           <th>#</th>
-          <th>First Name</th>
-          <th>Last Name</th>
-          <th>Username</th>
+          <th>luceneId</th>
+          <th>moduleCode</th>
+          <th>serach</th>
+          <th>tableId</th>
         </tr>
       </thead>
-      <tbody>
-        <tr>
-          <th scope="row">1</th>
-          <td>Mark</td>
-          <td>Otto</td>
-          <td>@mdo</td>
-        </tr>
-        <tr>
-          <th scope="row">2</th>
-          <td>Jacob</td>
-          <td>Thornton</td>
-          <td>@fat</td>
-        </tr>
-        <tr>
-          <th scope="row">3</th>
-          <td>Larry</td>
-          <td>the Bird</td>
-          <td>@twitter</td>
-        </tr>
+      <tbody id="tableList">
+        
       </tbody>
     </table>
   </div>
@@ -93,5 +77,44 @@
   </div>
 </div>
 
+<script type="text/javascript">
+var basePath= '${basePath}';
+$(function(){
+	search();
+});
+
+	function search(){
+		var search=$("#search").val();
+		$.post(basePath+"/external/search",{search:search},function(data){
+			Table(JSON.parse(data));
+		});
+	}
+	
+	function Table(data){
+		
+		var list='';
+		var count=0;
+		$.each(data,function(){
+			count++;
+			list+='<tr>';
+			list+='<th scope="row">'+count+'</th>';
+			list+='<td>'+this.luceneId+'</td>';
+			list+='<td>'+this.moduleCode+'</td>';
+			list+='<td>'+this.serach+'</td>';
+			list+='<td>'+this.tableId+'</td>';
+			list+='<tr>';
+		});
+		$("#tableList").html(list);
+	}
+	
+	//注册键盘事件
+	document.onkeydown = function(e) {
+	    //捕捉回车事件
+	    var ev = (typeof event!= 'undefined') ? window.event : e;
+	    if(ev.keyCode == 13 && document.activeElement.id == "search"){
+	    	search();
+		} 
+	}
+</script>
 
 </html>
